@@ -10,6 +10,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 @Primary
@@ -22,18 +23,16 @@ public class CustomUserDetailsService implements UserDetailsService {
     }
 
     @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        Member member = memberRepository.findByUserId(username)
-                .orElseThrow(() -> new UsernameNotFoundException("사용자를 찾을 수 없습니다: " + username));
+    public UserDetails loadUserByUsername(String userId) throws UsernameNotFoundException {
+        Member member = memberRepository.findByUserId(userId)
+                .orElseThrow(() -> new UsernameNotFoundException("해당 사용자를 찾을 수 없습니다: " + userId));
 
         return new CustomUserDetails(
-                member.getUserId(),
-                member.getPassword(),
-                member.getName(),
-                member.getNickname(),
-                Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+                member,
+                List.of(new SimpleGrantedAuthority(member.getRole().name()))
         );
     }
+
 
 
 }
